fix dosa-dosa itag,item,shop,stag,user
