# app/Http/Controllers/ShopController.php
@@ -11,7 +11,7 @@ class ShopController extends Controller
 /**
 * 
 *    @SWG\Get(
-*        path="/api/v1/shop",
+*        path="/api/v1/Shop",
 *        summary="Retrieves the collection of Shop resources.",
 *        produces={"application/json"},
 *        tags={"shop"},
@@ -83,7 +83,48 @@ class ShopController extends Controller
         return $shop;
     }
 
-
+/**
+* 
+*    @SWG\Put(
+*        path="/api/v1/Shop/{id}",
+*        summary="Edit shops resources.",
+*        produces={"application/json"},
+*        tags={"shop"},
+*        @SWG\Response(
+*            response=200,
+*            description="shop collection.",
+*            @SWG\Schema(
+*                type="array",
+*                @SWG\Items(ref="#/definitions/shop")
+*                )
+*            ),
+*            @SWG\Response(
+*                response=401,
+*                description="Unauthorized action.",
+*            ),
+*            @SWG\Parameter(
+*                name="Authorization",
+*                in="header",
+*                required=true,
+*                type="string"
+*            ),
+*           @SWG\Parameter(
+*            name="id",
+*            in="path",
+*            required=true,
+*            type="integer"
+*           ),
+*        @SWG\Parameter(
+*            name="body",
+*            in="body",
+*            required=true,
+*            type="string",
+*            @SWG\Schema(
+*            type="string"
+*            )
+*        )
+*        )
+*/
     /**
      * Update the specified resource in storage.
      *
@@ -100,38 +141,12 @@ class ShopController extends Controller
                 'message' => 'Record not found',
             ], 404);
         }
-        $shop->shop = $request->shop;
+        $shop->name = $request->name;
         $shop->save();
         return $shop;
     }
 
-/**
-*
-*   @SWG\Delete(
-*        path="/api/v1/shop/{id}",
-*        summary="Removes the Shop resource.",
-*        produces={"application/json"},
-*        tags={"shop"},
-*        @SWG\Response(
-*            response=204,
-*            description="Shop resource deleted.",
-*        ),
-*        @SWG\Response(
-*            response=401,
-*            description="Unauthorized action.",
-*        ),
-*        @SWG\Response(
-*            response=404,
-*            description="Resource not found.",
-*        ),
-*        @SWG\Parameter(
-*            name="id",
-*            in="path",
-*            required=true,
-*            type="integer"
-*        )
-*    )
-*/
+
 
 
 
