# app/Http/Controllers/customercontroller.php
@@ -169,33 +169,7 @@ class customercontroller extends Controller
         $customer->save();
         return $customer;
     }
-/**
-*
-*   @SWG\Delete(
-*        path="/api/v1/customer/{id}",
-*        summary="Removes the customer resource.",
-*        produces={"application/json"},
-*        tags={"customer"},
-*        @SWG\Response(
-*            response=204,
-*            description="customer resource deleted.",
-*        ),
-*        @SWG\Response(
-*            response=401,
-*            description="Unauthorized action.",
-*        ),
-*        @SWG\Response(
-*            response=404,
-*            description="Resource not found.",
-*        ),
-*        @SWG\Parameter(
-*            name="id",
-*            in="path",
-*            required=true,
-*            type="integer"
-*        )
-*    )
-*/
+
     /**
      * Remove the specified resource from storage.
      *
